--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "connect": "^3.6.1",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
+    "mitt": "^1.1.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
@@ -35,7 +36,7 @@
     "bundle-loader": "^0.5.5",
     "child_process": "^1.0.2",
     "css-loader": "^0.28.4",
-    "eslint": "^3.8.0",
+    "eslint": "^3.9.0",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-import": "^2.1.0",
@@ -52,6 +53,7 @@
     "imports-loader": "^0.7.0",
     "json-loader": "^0.5.4",
     "less-loader": "^4.0.4",
+    "lodash": "^4.17.4",
     "node-sass": "^4.5.2",
     "path": "^0.12.7",
     "pre-commit": "^1.2.2",
