--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "antd": "^2.10.4",
     "babel-runtime": "6.x",
+    "body-parser": "^1.18.0",
     "connect": "^3.6.1",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
