--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
+    "awesome-typescript-loader": "^3.2.3",
     "axios": "^0.16.1",
     "babel-core": "^6.21.0",
     "babel-eslint": "^6.1.2",
