更改目录结构

--- a/client/components/tsconfig.json
+++ b/client/components/tsconfig.json
@@ -7,7 +7,7 @@
     },
     "include": [
         "./components/**/*",
-        "./common/**/*"
+        "../common/**/*"
     ],
     "exclude": [
         "../node_modules"
