--- a/client/.babelrc
+++ b/client/.babelrc
@@ -9,12 +9,6 @@
     "transform-decorators-legacy",
     "transform-async-to-generator",
     "transform-do-expressions",
-    "transform-runtime",
-    [
-      "import", {
-        "libraryName": "antd",
-        "style": "css"
-      }
-    ]
+    "transform-runtime"
   ]
 }
