--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "mitt": "^1.1.2",
     "react": "^15.4.2",
     "react-color": "^2.13.5",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "@types/react": "^16.0.5",
@@ -42,6 +44,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "bundle-loader": "^0.5.5",
     "child_process": "^1.0.2",
+    "classnames": "^2.2.5",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
     "eslint": "^3.9.0",
@@ -77,6 +80,7 @@
     "sass-loader": "^6.0.3",
     "step": "^1.0.0",
     "style-loader": "^0.17.0",
+    "ts-loader": "^2.3.7",
     "ts-node": "^3.3.0",
     "typescript": "^2.5.2",
     "url-loader": "^0.5.9",
