--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "pre-commit": "node ./tool/hooks/pre-commit.js",
     "lint": "eslint src --ext '.js,.jsx'",
     "ssr": "nodemon -w ./ssr/**/*.js --exec ts-node ./ssr/main.js",
-    "ssr-build": "./node_modules/.bin/webpack --progress --config=./webpack.config.ssr.js"
+    "ssr-build": "./node_modules/.bin/webpack --progress --config=./webpack.config.ssr.js",
+    "build": "./node_modules/.bin/webpack -p --config=./webpack.config.js"
   },
   "pre-commit": [
     "pre-commit"
