--- a/client/components/tsconfig.json
+++ b/client/components/tsconfig.json
@@ -3,7 +3,15 @@
         "sourceMap": true,
         "noImplicitAny": true,
         "target": "es6",
-        "jsx": "react",
+        "lib": [
+            "DOM",
+            "ES6",
+            "DOM.Iterable",
+            "ScriptHost",
+            "ES7"
+        ],
+        "jsx": "Preserve",
+        "allowSyntheticDefaultImports": true,
         "allowJs": true,
         "typeRoots": [
             "node_modules/@types"
