--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,8 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.3",
+    "@types/node": "^8.0.30",
     "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
     "autoprefixer-loader": "^3.2.0",
@@ -84,6 +86,7 @@
     "style-loader": "^0.17.0",
     "ts-loader": "^2.3.7",
     "ts-node": "^3.3.0",
+    "tslint-eslint-rules": "^4.1.1",
     "typescript": "^2.5.2",
     "url-loader": "^0.5.9",
     "webpack": "^2.2.1",
