--- a/client/package.json
+++ b/client/package.json
@@ -23,12 +23,15 @@
     "immutable": "^3.8.1",
     "mitt": "^1.1.2",
     "react": "^15.4.2",
-    "react-color": "^2.13.5",
+    "react-color": "^2.13.8",
     "react-dom": "^15.4.2",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "styled-components": "^2.1.2"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.3",
+    "@types/node": "^8.0.30",
     "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
     "autoprefixer-loader": "^3.2.0",
@@ -74,6 +77,7 @@
     "nodemon": "^1.12.1",
     "path": "^0.12.7",
     "postcss-loader": "^2.0.6",
+    "postcss-modules-values": "^1.3.0",
     "pre-commit": "^1.2.2",
     "process": "^0.11.10",
     "prop-types": "^15.5.10",
@@ -84,6 +88,7 @@
     "style-loader": "^0.17.0",
     "ts-loader": "^2.3.7",
     "ts-node": "^3.3.0",
+    "tslint-eslint-rules": "^4.1.1",
     "typescript": "^2.5.2",
     "url-loader": "^0.5.9",
     "webpack": "^2.2.1",
