--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
     "download": "^6.2.5",
     "emailjs": "^1.0.12",
     "express-session": "^1.11.3",
+    "fstream": "^1.0.11",
+    "got": "^7.1.0",
     "lodash": "^4.17.4",
     "lz-string": "^1.4.4",
     "mongoose": "^4.11.7",
@@ -38,6 +40,7 @@
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.0",
     "socket.io": "^2.0.3",
+    "tar": "^4.0.1",
     "yazl": "^2.4.2"
   },
   "devDependencies": {
