--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,13 @@
     "babel-runtime": "6.x",
     "body-parser": "^1.18.0",
     "connect": "^3.6.1",
-    "font": "git+https://github.com/freed-framework/font.git",
+    "font": "https://github.com/freed-framework/font.git",
     "freed-spa": "https://github.com/freed-framework/freed-spa",
     "got": "^7.1.0",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "mitt": "^1.1.2",
+    "moment": "^2.18.1",
     "react": "^15.4.2",
     "react-color": "^2.13.8",
     "react-dom": "^15.4.2",
