--- a/server/package.json
+++ b/server/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@types/node": "^7.0.18",
+    "@types/mongoose": "^4.7.23",
     "cross-env": "^5.0.5",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.0",
