--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,9 @@
     "test": "cross-env CONF=test node ./tool/server.js",
     "pre-commit": "node ./tool/hooks/pre-commit.js",
     "lint": "eslint src --ext '.js,.jsx'",
-    "ssr": "nodemon -w ./ssr/**/*.js --exec ts-node ./ssr/main.js",
+    "ssr": "./node_modules/.bin/nodemon -w ./ssr/**/*.js --exec ts-node ./ssr/main.js",
     "ssr-build": "./node_modules/.bin/webpack --progress --config=./webpack.config.ssr.js",
-    "build": "./node_modules/.bin/webpack -p --config=./webpack.config.js"
+    "build": "./node_modules/.bin/webpack --config=./webpack.config.js"
   },
   "pre-commit": [
     "pre-commit"
