--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "auth0-nestjs-regular-webapp-sample",
+  "name": "nest-typescript-starter",
   "version": "1.0.0",
-  "description": "NestJS + Auth0 Regular WebApp seed",
-  "repository": "git://github.com/cdiaz/nestjs-auth0",
-  "author": "cdiaz",
+  "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon -w *.*.ts --exec ts-node ./src/main.ts",
+    "start": "cross-env NODE_ENV=development nodemon -w *.*.ts --exec ts-node ./src/server.ts",
     "dev": "cross-env NODE_ENV=test nodemon -w *.*.ts --exec ts-node ./src/main.ts",
     "test": "mocha src/__test__/**/*.test.ts src/api/**/*.test.ts",
     "test_cover": "istanbul cover node_modules/mocha/bin/_mocha src/api/**/*.test.ts",
@@ -18,46 +16,33 @@
     "pm2-test": "sh ./server.sh test"
   },
   "dependencies": {
-    "@nestjs/common": "3.0.0",
-    "@nestjs/core": "3.0.1",
-    "@nestjs/microservices": "3.0.1",
-    "@nestjs/testing": "3.0.0",
-    "@nestjs/websockets": "3.0.0",
-    "bcrypt": "^1.0.2",
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "cors": "^2.8.2",
-    "dotenv": "^4.0.0",
-    "download": "^6.2.5",
+    "@nestjs/common": "^4.0.0",
+    "@nestjs/core": "^4.0.0",
+    "@nestjs/microservices": "^4.0.0",
+    "@nestjs/testing": "^4.0.0",
+    "@nestjs/websockets": "^4.0.0",
+    "body-parser": "^1.18.2",
+    "class-transformer": "^0.1.8",
+    "class-validator": "^0.7.3",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "emailjs": "^1.0.12",
-    "express-session": "^1.11.3",
-    "fstream": "^1.0.11",
-    "got": "^7.1.0",
+    "express-session": "^1.15.6",
     "lodash": "^4.17.4",
     "lz-string": "^1.4.4",
-    "mongoose": "^4.11.7",
+    "mongoose": "^4.12.4",
     "node-uuid": "^1.4.8",
-    "passport": "^0.3.0",
-    "passport-auth0": "^0.6.0",
-    "pm2": "^2.6.1",
-    "pug": "~2.0.0-beta3",
+    "redis": "^2.7.1",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.4.0",
-    "socket.io": "^2.0.3",
-    "tar": "^4.0.1",
-    "yazl": "^2.4.2"
+    "rxjs": "^5.5.0",
+    "socket.io": "^2.0.4",
+    "typescript": "^2.5.2"
   },
   "devDependencies": {
-    "@types/node": "^7.0.18",
+    "@types/node": "^8.0.28",
     "@types/mongoose": "^4.7.23",
-    "cross-env": "^5.0.5",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.5.0",
-    "nodemon": "^1.11.0",
-    "should": "^12.0.0",
-    "spiderman-crawler": "^0.2.3",
-    "supertest": "^3.0.0",
-    "ts-node": "^3.0.2",
-    "typescript": "^2.2.2"
+    "cross-env": "^5.1.0",
+    "nodemon": "^1.12.1",
+    "ts-node": "^3.3.0"
   }
 }
