--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "freed-spa": "https://github.com/freed-framework/freed-spa",
     "got": "^7.1.0",
     "history": "^4.6.1",
-    "immutable": "^3.8.1",
+    "immutable": "^3.8.2",
     "mitt": "^1.1.2",
     "moment": "^2.18.1",
     "react": "^15.4.2",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
+    "@types/immutable": "^3.8.7",
     "@types/node": "^8.0.30",
     "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
