--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^15.4.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "rxjs": "^5.5.1",
     "styled-components": "^2.1.2",
     "zipfolder": "^1.0.4"
   },
