--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "antd": "^2.10.4",
+    "autoprefixer": "^7.1.6",
     "babel-runtime": "6.x",
     "body-parser": "^1.18.0",
     "connect": "^3.6.1",
@@ -29,6 +30,7 @@
     "js-cookie": "^2.1.4",
     "mitt": "^1.1.2",
     "moment": "^2.18.1",
+    "postcss-pxtorem": "^4.0.1",
     "react": "^15.4.2",
     "react-color": "^2.13.8",
     "react-dom": "^15.4.2",
