--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,9 @@
     "docs": "documentation build api/**/*.*.ts --format md --github -o ./docs/api/image.md",
     "prestart:prod": "tsc",
     "production": "cross-env NODE_ENV=production && forever start ./dist/main.js",
-    "pm2-dev": "sh ./server.sh dev",
-    "pm2-pro": "sh ./server.sh pro",
-    "pm2-test": "sh ./server.sh test"
+    "pm2-dev": "sh ../server.sh dev",
+    "pm2-pro": "sh ../server.sh pro",
+    "pm2-test": "sh ../server.sh test"
   },
   "dependencies": {
     "@nestjs/common": "^4.0.0",
