--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "passport-local": "^1.0.0",
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.10",
+    "request": "^2.83.0",
     "rxjs": "^5.5.0",
     "socket.io": "^2.0.4",
     "typescript": "^2.5.2"
