--- a/ssr/package.json
+++ b/ssr/package.json
@@ -34,6 +34,8 @@
   "dependencies": {
     "autoprefixer": "^7.1.6",
     "babel-loader": "^6.4.1",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -41,12 +43,16 @@
     "json-loader": "^0.5.7",
     "less-loader": "^4.0.5",
     "ncp": "^2.0.0",
+    "needle": "^2.0.1",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.8",
     "postcss-pxtorem": "^4.0.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "request": "^2.83.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
+    "socket.io": "^2.0.4",
     "style-loader": "^0.19.0",
     "ts-loader": "^3.1.1",
     "typescript": "^2.6.1",
