--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,14 @@
     "pre-commit"
   ],
   "dependencies": {
-    "freed-multi": "https://github.com/freed-framework/freed-multi.git",
     "antd": "^2.10.4",
+    "antd-mobile": "^2.0.3",
     "autoprefixer": "^7.1.6",
     "babel-runtime": "6.x",
     "body-parser": "^1.18.0",
     "connect": "^3.6.1",
     "font": "https://github.com/freed-framework/font.git",
+    "freed-multi": "https://github.com/freed-framework/freed-multi.git",
     "freed-spa": "git+https://github.com/freed-framework/freed-spa.git",
     "got": "^7.1.0",
     "history": "^4.6.1",
@@ -34,9 +35,11 @@
     "moment": "^2.18.1",
     "postcss-pxtorem": "^4.0.1",
     "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-color": "^2.13.8",
     "react-dom": "^15.4.2",
     "react-fileupload": "^2.4.0",
+    "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
