--- a/ssr/package.json
+++ b/ssr/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^6.4.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "copy": "^0.3.1",
     "cpy": "^6.0.0",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
