--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,11 @@
     "pm2-test": "sh ../server.sh test"
   },
   "dependencies": {
-    "@nestjs/common": "^4.0.0",
-    "@nestjs/core": "^4.0.0",
-    "@nestjs/microservices": "^4.0.0",
-    "@nestjs/testing": "^4.0.0",
-    "@nestjs/websockets": "^4.0.0",
+    "@nestjs/common": "^4.3.0",
+    "@nestjs/core": "^4.3.0",
+    "@nestjs/microservices": "^4.3.0",
+    "@nestjs/testing": "^4.3.0",
+    "@nestjs/websockets": "^4.3.0",
     "body-parser": "^1.18.2",
     "class-transformer": "^0.1.8",
     "class-validator": "^0.7.3",
@@ -40,6 +40,7 @@
     "mongoose": "^4.12.4",
     "node-uuid": "^1.4.8",
     "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.10",
