--- a/server/package.json
+++ b/server/package.json
@@ -47,7 +47,8 @@
     "request": "^2.83.0",
     "rxjs": "^5.5.0",
     "socket.io": "^2.0.4",
-    "typescript": "^2.5.2"
+    "typescript": "^2.5.2",
+    "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
     "@types/node": "^8.0.28",
