--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "freed-spa": "git+https://github.com/freed-framework/freed-spa.git",
     "got": "^7.1.0",
     "history": "^4.6.1",
+    "html2canvas": "^1.0.0-alpha.4",
     "http-proxy": "^1.16.2",
     "immutable": "^3.8.2",
     "js-cookie": "^2.1.4",
