--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "test": "cross-env CONF=test node ./tool/server.js",
     "pre-commit": "node ./tool/hooks/pre-commit.js",
     "lint": "eslint src --ext '.js,.jsx'",
-    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config=./webpack.config.js",
+    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config=./webpack.config.dev.js",
     "build-mobile": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config=./webpack.config.render-mobile.js",
     "build-pc": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config=./webpack.config.render-pc.js"
   },
