--- a/ssr/package.json
+++ b/ssr/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d lib",
-    "start": "cross-env NODE_ENV=production node-dev ./lib/index.js",
+    "start": "cross-env NODE_ENV=development node-dev ./lib/index.js",
+    "server": "cross-env NODE_ENV=production node-dev ./lib/index.js",
     "pm2-dev": "pm2 start ./pm2.config.js --env dev",
     "pm2-pro": "pm2 start ./pm2.config.js --env pro",
     "pm2-test": "pm2 start ./pm2.config.js --env test"
