--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "reqwest": "^2.0.5",
     "rxjs": "^5.5.1",
     "socket.io": "^2.0.4",
     "styled-components": "^2.1.2",
