--- a/server/package.json
+++ b/server/package.json
@@ -23,12 +23,14 @@
     "@nestjs/microservices": "^4.3.0",
     "@nestjs/testing": "^4.3.0",
     "@nestjs/websockets": "^4.3.0",
+    "adm-zip": "^0.4.7",
     "body-parser": "^1.18.2",
     "class-transformer": "^0.1.8",
     "class-validator": "^0.7.3",
     "connect-multiparty": "^2.1.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "cpy": "^6.0.0",
     "crypto": "^1.0.1",
     "dotenv": "^4.0.0",
     "emailjs": "^1.0.12",
@@ -46,10 +48,13 @@
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.10",
     "request": "^2.83.0",
+    "rimraf": "^2.6.2",
     "rxjs": "^5.5.0",
     "socket.io": "^2.0.4",
     "typescript": "^2.5.2",
-    "winston": "^3.0.0-rc1"
+    "unzip": "^0.1.11",
+    "winston": "^3.0.0-rc1",
+    "zipfolder": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "^8.0.28",
