--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -53,7 +53,8 @@
         "linebreak-style": 0,
         "no-plusplus": 0,
         "class-methods-use-this": 0,
-        "import/prefer-default-export": 0
+        "import/prefer-default-export": 0,
+        "experimentalDecorators": 0
     },
     "globals": {
         "__PRO__": true,
