修改地址源

--- a/client/package.json
+++ b/client/package.json
@@ -18,110 +18,110 @@
     "pre-commit"
   ],
   "dependencies": {
-    "antd": "^2.10.4",
-    "antd-mobile": "^2.0.3",
-    "autoprefixer": "^7.1.6",
+    "antd": "2.10.4",
+    "antd-mobile": "2.0.3",
+    "autoprefixer": "7.1.6",
     "babel-runtime": "6.x",
-    "body-parser": "^1.18.0",
-    "connect": "^3.6.1",
+    "body-parser": "1.18.0",
+    "connect": "3.6.1",
     "font": "https://github.com/freed-framework/font.git",
     "freed-multi": "https://github.com/freed-framework/freed-multi.git",
     "freed-spa": "git+https://github.com/freed-framework/freed-spa.git",
-    "got": "^7.1.0",
-    "history": "^4.6.1",
-    "html2canvas": "^1.0.0-alpha.4",
-    "http-proxy": "^1.16.2",
-    "immutable": "^3.8.2",
-    "js-cookie": "^2.1.4",
-    "mitt": "^1.1.2",
-    "moment": "^2.18.1",
-    "postcss-pxtorem": "^4.0.1",
-    "react": "^15.4.2",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-color": "^2.13.8",
-    "react-dom": "^15.4.2",
-    "react-fileupload": "^2.4.0",
-    "react-lazyload": "^2.3.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
-    "reqwest": "^2.0.5",
-    "rxjs": "^5.5.1",
-    "socket.io": "^2.0.4",
-    "styled-components": "^2.1.2",
-    "zipfolder": "^1.0.4"
+    "got": "7.1.0",
+    "history": "4.6.1",
+    "html2canvas": "1.0.0-alpha.4",
+    "http-proxy": "1.16.2",
+    "immutable": "3.8.2",
+    "js-cookie": "2.1.4",
+    "mitt": "1.1.2",
+    "moment": "2.18.1",
+    "postcss-pxtorem": "4.0.1",
+    "react": "15.4.2",
+    "react-addons-css-transition-group": "15.6.2",
+    "react-color": "2.13.8",
+    "react-dom": "15.4.2",
+    "react-fileupload": "2.4.0",
+    "react-lazyload": "2.3.0",
+    "react-redux": "5.0.6",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
+    "reqwest": "2.0.5",
+    "rxjs": "5.5.1",
+    "socket.io": "2.0.4",
+    "styled-components": "2.1.2",
+    "zipfolder": "1.0.4"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.3",
-    "@types/immutable": "^3.8.7",
-    "@types/node": "^8.0.30",
-    "@types/react": "^16.0.5",
-    "@types/react-dom": "^15.5.4",
-    "antd-mobile": "^2.0.3",
-    "autoprefixer-loader": "^3.2.0",
-    "awesome-typescript-loader": "^3.2.3",
-    "axios": "^0.16.1",
-    "babel-core": "^6.21.0",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-import": "^1.2.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "bundle-loader": "^0.5.5",
-    "child_process": "^1.0.2",
-    "classnames": "^2.2.5",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.4",
-    "eslint": "^3.9.0",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-import": "^2.1.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "@types/classnames": "2.2.3",
+    "@types/immutable": "3.8.7",
+    "@types/node": "8.0.30",
+    "@types/react": "16.0.5",
+    "@types/react-dom": "15.5.4",
+    "antd-mobile": "2.0.3",
+    "autoprefixer-loader": "3.2.0",
+    "awesome-typescript-loader": "3.2.3",
+    "axios": "0.16.1",
+    "babel-core": "6.21.0",
+    "babel-eslint": "6.1.2",
+    "babel-loader": "6.2.10",
+    "babel-plugin-import": "1.2.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.23.0",
+    "babel-preset-stage-0": "6.16.0",
+    "bundle-loader": "0.5.5",
+    "child_process": "1.0.2",
+    "classnames": "2.2.5",
+    "cross-env": "5.0.5",
+    "css-loader": "0.28.4",
+    "eslint": "3.9.0",
+    "eslint-config-airbnb": "13.0.0",
+    "eslint-plugin-babel": "4.0.0",
+    "eslint-plugin-import": "2.1.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-markdown": "*",
-    "eslint-plugin-react": "^6.1.2",
-    "exports-loader": "^0.6.4",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "fs": "^0.0.1-security",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-clean": "^0.3.2",
-    "html-webpack-plugin": "^2.28.0",
-    "imports-loader": "^0.7.0",
-    "json-loader": "^0.5.4",
-    "jsx-loader": "^0.13.2",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "lodash": "^4.17.4",
-    "ncp": "^2.0.0",
-    "next": "^3.2.1",
-    "node-sass": "^4.5.2",
-    "nodemon": "^1.12.1",
-    "path": "^0.12.7",
-    "postcss-loader": "^2.0.6",
-    "postcss-modules-values": "^1.3.0",
-    "pre-commit": "^1.2.2",
-    "process": "^0.11.10",
-    "prop-types": "^15.5.10",
-    "react-draggable": "^3.0.4",
-    "react-hot-loader": "^3.0.0-beta.3",
-    "react-native": "^0.50.4",
-    "sass-loader": "^6.0.3",
-    "source-map-loader": "^0.2.1",
-    "stats-webpack-plugin": "^0.6.1",
-    "step": "^1.0.0",
-    "style-loader": "^0.17.0",
-    "ts-loader": "^2.3.7",
-    "ts-node": "^3.3.0",
-    "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^2.5.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.5"
+    "eslint-plugin-react": "6.1.2",
+    "exports-loader": "0.6.4",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.11.1",
+    "fs": "0.0.1-security",
+    "gulp": "3.9.1",
+    "gulp-babel": "6.1.2",
+    "gulp-clean": "0.3.2",
+    "html-webpack-plugin": "2.28.0",
+    "imports-loader": "0.7.0",
+    "json-loader": "0.5.4",
+    "jsx-loader": "0.13.2",
+    "less": "2.7.3",
+    "less-loader": "4.0.5",
+    "lodash": "4.17.4",
+    "ncp": "2.0.0",
+    "next": "3.2.1",
+    "node-sass": "4.5.2",
+    "nodemon": "1.12.1",
+    "path": "0.12.7",
+    "postcss-loader": "2.0.6",
+    "postcss-modules-values": "1.3.0",
+    "pre-commit": "1.2.2",
+    "process": "0.11.10",
+    "prop-types": "15.5.10",
+    "react-draggable": "3.0.4",
+    "react-hot-loader": "3.0.0-beta.3",
+    "react-native": "0.50.4",
+    "sass-loader": "6.0.3",
+    "source-map-loader": "0.2.1",
+    "stats-webpack-plugin": "0.6.1",
+    "step": "1.0.0",
+    "style-loader": "0.17.0",
+    "ts-loader": "2.3.7",
+    "ts-node": "3.3.0",
+    "tslint-eslint-rules": "4.1.1",
+    "typescript": "2.5.2",
+    "url-loader": "0.5.9",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.4.5"
   },
   "author": "denglingbo",
   "license": "ISC"
