--- a/client/package.json
+++ b/client/package.json
@@ -36,15 +36,15 @@
     "mitt": "1.1.2",
     "moment": "2.18.1",
     "postcss-pxtorem": "4.0.1",
-    "react": "15.4.2",
-    "react-addons-css-transition-group": "15.6.2",
-    "react-color": "2.13.8",
-    "react-dom": "15.4.2",
-    "react-fileupload": "2.4.0",
-    "react-lazyload": "2.3.0",
-    "react-redux": "5.0.6",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
+    "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-color": "^2.13.8",
+    "react-dom": "^15.4.2",
+    "react-fileupload": "^2.4.0",
+    "react-lazyload": "^2.3.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "3.7.2",
     "reqwest": "2.0.5",
     "rxjs": "5.5.1",
