--- a/client/components/tsconfig.json
+++ b/client/components/tsconfig.json
@@ -15,7 +15,8 @@
         "experimentalDecorators": true,
         "allowJs": true,
         "typeRoots": [
-            "node_modules/@types"
+            "node_modules/@types",
+            "./typings/@types"
         ]
     },
     "include": [
